--- a/G00347796/metric-conversion.html
+++ b/G00347796/metric-conversion.html
@@ -19,9 +19,16 @@
 
 			<p>Measurement: </p><input type="text" name="value1" id="value1"><br>
 
-			<button class="button" onclick="fToM()">Convert</button>
-
+			<button class="button" onclick="fToM()">F to M</button>
+			<button class="button" onclick="IToC()">I to C</button>
+			<button class="button" onclick="YToM()">Y to M</button>
+			<button class="button" onclick="MilesToK()">Mile to K</button>
+			
 			<p id="resultsentence"></p>
+			<p id="resultsentence1"></p>
+			<p id="resultsentence2"></p>
+			<p id="resultsentence3"></p>
+			
         </div>
       </div>
     </div>
